--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "sass": "^1.66.1"
   },
   "dependencies": {
+    "flatpickr": "^4.6.13",
     "simple-parallax-js": "^5.6.2"
   },
   "description": ""
